@@ -54,7 +54,7 @@ Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::Prereqs = 0
-Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.133290
+Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.142180
 Dist::Zilla::Plugin::InstallGuide = 0
 Dist::Zilla::Plugin::CheckSelfDependency = 0
 Dist::Zilla::Plugin::Run::AfterBuild = 0
